do i18n for TakQuickstartiOS (fi/en)

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -393,5 +393,79 @@
   "TakQuickstartAndroid5.unfoldableCard3.description4": "Select <strong>My Callsign.</strong>",
   "TakQuickstartAndroid5.unfoldableCard3.description5": "Enter the callsign you were assigned - for example, <strong>Rambo</strong>.",
   "TakQuickstartAndroid5.unfoldableCard3.description7": "Press <strong>OK.</strong>",
-  "TakQuickstartAndroid5.alterForward": "Done! Go back."
+  "TakQuickstartAndroid5.alterForward": "Done! Go back.",
+
+  "TAKQUICKSTARTIOS1": "TAKQUICKSTARTIOS1",
+  "TakQuickstartIos1.navbarTitle": "iTAK Quickstart",
+  "TakQuickstartIos1.statusBarTitle": "Install the Application (1/5)",
+  "TakQuickstartIos1.serviceInfoCard.details": "iTAK Quickstart - phase 1: <strong>install the application</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them.",
+  "TakQuickstartIos1.unfoldableCard1.title": "1. Download the Applications",
+  "TakQuickstartIos1.unfoldableCard1.description1": "<h3>Download iTAK (1/2)</h3><strong>Download</strong> the iTAK app from the App Store and install it. The download link is below, <strong>press</strong>:",
+  "TakQuickstartIos1.unfoldableCard2.title": "2. Download your Client Package",
+  "TakQuickstartIos1.unfoldableCard2.description1": "Download your personal Client Package from the <strong>front page</strong> of this service by pressing the green <strong>Download your Client Package</strong> button.<br><br>Save the .zip file.",
+  "TakQuickstartIos1.unfoldableCard2.note": "NOTE! The zip file does not need to be extracted!",
+
+  "TAKQUICKSTARTIOS2": "TAKQUICKSTARTIOS2",
+  "TakQuickstartIos2.navbarTitle": "iTAK Quickstart",
+  "TakQuickstartIos2.statusBarTitle": "Do the Basic Settings (2/5)",
+  "TakQuickstartIos2.serviceInfoCard.details": "iTAK Quickstart - phase 2: <strong>Do the basic settings</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them. iTAK app should be open at this stage.",
+  "TakQuickstartIos2.unfoldableCard1.title": "1. <strong>Start the application</strong>",
+  "TakQuickstartIos2.unfoldableCard1.description1": "Open the <strong>iTAK</strong> application.<br><br>When the application asks: <em>\"iTAK wants to find and connect to devices on your local network...\"</em>, choose <strong>Don't Allow</strong>.",
+  "TakQuickstartIos2.unfoldableCard2.title": "2. <strong>Enter</strong> your Callsign.",
+  "TakQuickstartIos2.unfoldableCard2.description1": "Fill in the <strong>Profile Settings</strong>:",
+  "TakQuickstartIos2.unfoldableCard2.description2": "Enter your alias in the <strong>Callsign field</strong>, for example, <em>Rambo</em>.<br><br>Do <strong>not fill</strong> the Phone field.<br>Finally, press <em>Next.</em>",
+  "TakQuickstartIos2.unfoldableCard3.title": "3. <strong>Set</strong> Team Settings",
+  "TakQuickstartIos2.unfoldableCard3.description1": "Fill in the <strong>Team Settings:</strong>",
+  "TakQuickstartIos2.unfoldableCard3.description2": "In the <strong>Select Team</strong> field, choose your team's (as you should have been ordered to) color from the dropdown menu.<br><br>In the <strong>Select Team Role</strong> field, choose the role <strong>Team Member</strong>, unless otherwise instructed.<br><br><small><em>Command post users will set their role to HQ.</em></small><br><br>Finally, press <strong>Next.</strong>",
+  "TakQuickstartIos2.unfoldableCard4.title": "4. Grant the necessary permissions to the application",
+  "TakQuickstartIos2.unfoldableCard4.description1": "a. Set <strong>Privacy Settings</strong> to allow notifications and location services.",
+  "TakQuickstartIos2.unfoldableCard4.description2": "b. iOS will then ask if you allow iTAK to send you <strong>notifications</strong> and <strong>use your location</strong>.<br><br>Choose <strong>Allow</strong> for notifications:",
+  "TakQuickstartIos2.unfoldableCard4.description3": "c. Choose <strong>Allow While Using the App</strong> for location:",
+  "TakQuickstartIos2.unfoldableCard4.description4": "After this, move on to establish the server connection with your Client Package.",
+
+  "TAKQUICKSTARTIOS3": "TAKQUICKSTARTIOS3",
+  "TakQuickstartIos3.navbarTitle": "iTAK Quickstart",
+  "TakQuickstartIos3.statusBarTitle": "Connect to the Server (3/5)",
+  "TakQuickstartIos3.serviceInfoCard.details": "iTAK setup - phase 3: <strong>Connect to the Server</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them. iTAK app should be open at this stage.",
+  "TakQuickstartIos3.unfoldableCard1.title": "1. <strong>Open</strong> the Packages menu",
+  "TakQuickstartIos3.unfoldableCard1.step1": "a. Go to the <strong>map view</strong> and scroll the toolbar to the right until you find the <strong>Package</strong> icon.",
+  "TakQuickstartIos3.unfoldableCard1.step1.note": "<strong>Important!</strong> Do <strong>not</strong> attempt to install the Client Package via iTAK Settings->Network->Server!. That won't work.",
+  "TakQuickstartIos3.unfoldableCard2.title": "2. <strong>Add</strong> your message template package to iTAK",
+  "TakQuickstartIos3.unfoldableCard2.step1": "b. The Packages menu opens, it will be empty. Press the <strong>plus</strong> icon in the bottom right to add your message template package.",
+  "TakQuickstartIos3.unfoldableCard2.step2": "c. Choose <strong>Local Device</strong>.",
+  "TakQuickstartIos3.unfoldableCard2.step3": "d. Select your package. It will be a zip file named <em>YourCallsign.zip.</em>",
+  "TakQuickstartIos3.unfoldableCard2.step4": "e. As a sign of success, the Packages menu list will show <em>the server's callsign</em> and a green light. Return to the map view.",
+  "TakQuickstartIos3.unfoldableCard2.step5": "The server connection is now established. As a sign, the bottom right of the map will display in green <strong>Connected.</strong>",
+
+  "TAKQUICKSTARTIOS4": "TAKQUICKSTARTIOS4",
+  "TakQuickstartIos4.navbarTitle": "iTAK Quickstart",
+  "TakQuickstartIos4.statusBarTitle": "Set Units (4/5)",
+  "TakQuickstartIos4.serviceInfoCard.details": "iTAK Quickstart - phase 4: <strong>Set units</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them. iTAK app should be open at this stage.",
+  "TakQuickstartIos4.unfoldableCard1.title": "1. <strong>Open</strong> settings",
+  "TakQuickstartIos4.unfoldableCard1.description1": "a. Open <strong>Settings</strong> again from the gear icon in the top left corner.",
+  "TakQuickstartIos4.unfoldableCard1.description2": "b. Select <strong>Preferences</strong> from the main Settings menu.",
+  "TakQuickstartIos4.unfoldableCard1.description3": "Prepare to set the correct units of measure and coordinate system.",
+  "TakQuickstartIos4.unfoldableCard2.title": "2. <strong>Set</strong> units",
+  "TakQuickstartIos4.unfoldableCard2.description1": "Choose <strong>Units of Measure</strong>:",
+  "TakQuickstartIos4.unfoldableCard2.description2": "Select <strong>MGRS</strong> for Coordinate Format and <strong>Meters</strong> for Distance Format.",
+  "TakQuickstartIos4.unfoldableCard3.title": "3. Optionally <strong>change</strong> the map source",
+  "TakQuickstartIos4.unfoldableCard3.description1": "a. If you want to change the map source, select <strong>Map Source</strong> from the main Settings menu.",
+  "TakQuickstartIos4.unfoldableCard3.description2": "b. Choose your desired map source. Note! Availability may vary.",
+  "TakQuickstartIos4.unfoldableCard3.description3": "Great! You have now set up iTAK for use.<br><br><em><small>If you need to edit your callsign, you can do so from the Settings menu by clicking your callsign.</small></em>",
+
+  "TAKQUICKSTARTIOS5": "TAKQUICKSTARTIOS5",
+  "TakQuickstartIos5.navbarTitle": "iTAK Quickstart",
+  "TakQuickstartIos5.statusBarTitle": "Enable Data Sync (5/5)",
+  "TakQuickstartIos5.serviceInfoCard.details": "iTAK Quickstart - phase 5: <strong>Enable Data Sync</strong><br>Recommendation: Pair up - one displays the instructions, the other follows them. iTAK app should be open at this stage.",
+  "TakQuickstartIos5.unfoldableCard1.title": "1. Open Data Sync menu",
+  "TakQuickstartIos5.unfoldableCard1.step1": "In the main view, open the tool menu (at the bottom) and scroll to the right to find the <strong>Data Sync</strong> menu.",
+  "TakQuickstartIos5.unfoldableCard2.title": "2. Subscribe to feed",
+  "TakQuickstartIos5.unfoldableCard2.step1": "In the Data Sync menu, press the <strong>Subscribe</strong> button.",
+  "TakQuickstartIos5.unfoldableCard2.step2": "Select the available server (Your deployment's name should appear, such as 'positive-beetle.').",
+  "TakQuickstartIos5.unfoldableCard2.step3": "In the upcoming view, select the <strong>RECON</strong> feed & any other Feed you've been ordered to subscribe.",
+  "TakQuickstartIos5.unfoldableCard2.note": "Note: Image is currently missing.",
+  "TakQuickstartIos5.unfoldableCard3.title": "3. Feed at your disposal",
+  "TakQuickstartIos5.unfoldableCard3.step1": "Starting from now, the <strong>Recon Feed</strong> created and updated by your Command Post users is at your disposal.",
+  "TakQuickstartIos5.unfoldableCard3.step2": "The feed will appear in your Data Sync menu. Instructions for using the feed are in the <strong>Using in the group instructions.</strong>",
+  "TakQuickstartIos5.alterForward": "Done! Return from here."
 }
