--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -391,5 +391,80 @@
   "TakQuickstartAndroid5.unfoldableCard3.description4": "Valitse <strong>My Callsign.</strong>",
   "TakQuickstartAndroid5.unfoldableCard3.description5": "Anna omaksi tunnukseksi <strong>sinulle käsketty peite,</strong> esimerkiksi <em>Rambo</em>.",
   "TakQuickstartAndroid5.unfoldableCard3.description7": "Paina <strong>OK.</strong>",
-  "TakQuickstartAndroid5.alterForward": "Valmis! Palaa tästä."
+  "TakQuickstartAndroid5.alterForward": "Valmis! Palaa tästä.",
+
+  "TAKQUICKSTARTIOS1": "TAKQUICKSTARTIOS1",
+  "TakQuickstartIos1.navbarTitle": "iTAK käyttöönotto",
+  "TakQuickstartIos1.statusBarTitle": "Asenna sovellus (1/5)",
+  "TakQuickstartIos1.serviceInfoCard.details": "iTAK käyttöönotto - vaihe 1: <strong>asenna sovellukset</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee.",
+  "TakQuickstartIos1.unfoldableCard1.title": "1. Lataa sovellukset",
+  "TakQuickstartIos1.unfoldableCard1.description1": "<h3>Lataa iTAK (1/2)</h3><strong>Lataa</strong> iTAK-sovellus App Storesta ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
+  "TakQuickstartIos1.unfoldableCard2.title": "2. Lataa viestiperusteet",
+  "TakQuickstartIos1.unfoldableCard2.description1": "Lataa tämän palvelun <strong>etusivulta</strong> viestiperusteet painamalla vihreää <strong>Lataa viestiperustepaketti</strong>-nappia.<br><br>Tallenna .zip-tiedosto.",
+  "TakQuickstartIos1.unfoldableCard2.note": "HUOMAA! Zip-tiedostoa ei tarvitse purkaa!",
+  "TakQuickstartIos1.alterForward": "Valmis! Palaa tästä.",
+
+  "TAKQUICKSTARTIOS2": "TAKQUICKSTARTIOS2",
+  "TakQuickstartIos2.navbarTitle": "iTAK käyttöönotto",
+  "TakQuickstartIos2.statusBarTitle": "Tee perusasetukset (2/5)",
+  "TakQuickstartIos2.serviceInfoCard.details": "iTAK käyttöönotto - vaihe 2: <strong>Tee perusasetukset</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee. Tässä vaiheessa tulee avata iTAK-sovellus.",
+  "TakQuickstartIos2.unfoldableCard1.title": "1. <strong>Käynnistä sovellus</strong>",
+  "TakQuickstartIos2.unfoldableCard1.description1": "Avaa <strong>iTAK</strong>-sovellus.<br><br>Kun sovellus kysyy: <em>\"iTAK haluaa etsiä lähiverkossa...\"</em>, valitse <strong>Älä salli</strong>.",
+  "TakQuickstartIos2.unfoldableCard2.title": "2. <strong>Anna</strong> oma Callsign",
+  "TakQuickstartIos2.unfoldableCard2.description1": "Täytä <strong>Profile Settings</strong>:",
+  "TakQuickstartIos2.unfoldableCard2.description2": "Anna <strong>Callsign-kenttään</strong> oma peitteesi, esimerkiksi <em>Rambo</em>.<br><br>Phone-kenttää <strong>ei täytetä.</strong><br>Paina lopuksi <em>Next.</em>",
+  "TakQuickstartIos2.unfoldableCard3.title": "3. <strong>Aseta</strong> Team Settings",
+  "TakQuickstartIos2.unfoldableCard3.description1": "Täytä <strong>Team Settings:</strong>",
+  "TakQuickstartIos2.unfoldableCard3.description2": "Valitse <strong>Select Team</strong>-kenttään rullavalikosta joukkosi (käsketty) väri.<br><br>Valitse <strong>Select Team Role</strong>-kenttään rullavalikosta rooli <strong>Team Member</strong>, ellei muuta ole käsketty.<br><br><small><em>Komentopaikkakäyttäjät asettavat roolin HQ.</em></small><br><br>Paina lopuksi <strong>Next.</strong>",
+  "TakQuickstartIos2.unfoldableCard4.title": "4. Anna sovellukselle tarvittavat oikeudet",
+  "TakQuickstartIos2.unfoldableCard4.description1": "a. Aseta <strong>Privacy Settings</strong> sallimaan ilmoitukset (notifications) ja sijainnin (location services).",
+  "TakQuickstartIos2.unfoldableCard4.description2": "b. iOS kysyy tämän jälkeen, sallitko iTAKin lähettävän sinulle <strong>ilmoituksia</strong> ja <strong>käyttää sijaintiasi</strong>.<br><br>Valitse ilmoituksiin <strong>Salli</strong>:",
+  "TakQuickstartIos2.unfoldableCard4.description3": "c. Valitse sijaintiin <strong>Salli käytettäessä</strong>:",
+  "TakQuickstartIos2.unfoldableCard4.description4": "Tämän jälkeen siirrytään muodostamaan palvelinyhteys.",
+
+  "TAKQUICKSTARTIOS3": "TAKQUICKSTARTIOS3",
+  "TakQuickstartIos3.navbarTitle": "iTAK käyttöönotto",
+  "TakQuickstartIos3.statusBarTitle": "Muodosta palvelinyhteys (3/5)",
+  "TakQuickstartIos3.serviceInfoCard.details": "iTAK käyttöönotto - vaihe 3: <strong>muodosta palvelinyhteys</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee. Tässä vaiheessa iTAK-sovelluksen tulee olla auki.",
+  "TakQuickstartIos3.unfoldableCard1.title": "1. <strong>Avaa</strong> Packages-valikko",
+  "TakQuickstartIos3.unfoldableCard1.step1": "a. Mene karttanäkymään ja rullaa työkaluriviä oikealle, kunnes löydät <strong>Package</strong>-kuvakkeen.",
+  "TakQuickstartIos3.unfoldableCard1.step1.note": "<strong>Tärkeää!</strong> Älä yritä asentaa perustepakettia iTAKin Settings->Network->Servers -valikosta. Se ei toimi.s",
+  "TakQuickstartIos3.unfoldableCard2.title": "2. <strong>Lisää</strong> viestiperustepakettisi iTAKiin",
+  "TakQuickstartIos3.unfoldableCard2.step1": "b. Packages-valikko aukeaa, se on tyhjä. Paina oikeasta alakulmasta <strong>plus</strong>-symbolia lisätäksesi viestiperustepakettisi.",
+  "TakQuickstartIos3.unfoldableCard2.step2": "c. Valitse <strong>Local Device</strong>.",
+  "TakQuickstartIos3.unfoldableCard2.step3": "d. Valitse pakettisi. Se on zip-tiedosto <em>Peitenimesi.zip.</em>",
+  "TakQuickstartIos3.unfoldableCard2.step4": "e. Onnistumisen merkiksi Packages-valikon listalle nousee <em>palvelimen peitenimi</em> ja vihreä merkkivalo. Palaa karttanäkymään.",
+  "TakQuickstartIos3.unfoldableCard2.step5": "Palvelinyhteys on nyt muodostettu. Sen merkkinä kartan oikeassa alakulmassa lukee vihreällä <strong>Connected.</strong>",
+
+  "TAKQUICKSTARTIOS4": "TAKQUICKSTARTIOS4",
+  "TakQuickstartIos4.navbarTitle": "iTAK käyttöönotto",
+  "TakQuickstartIos4.statusBarTitle": "Aseta mittayksiköt (4/5)",
+  "TakQuickstartIos4.serviceInfoCard.details": "iTAK käyttöönotto - vaihe 4: <strong>Aseta mittayksiköt</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee. Tässä vaiheessa iTAK-sovelluksen tulee olla auki.",
+  "TakQuickstartIos4.unfoldableCard1.title": "1. <strong>Avaa</strong> asetukset",
+  "TakQuickstartIos4.unfoldableCard1.description1": "a. Avaa jälleen <strong>Asetukset</strong> vasemman yläkulman hammasrataskuvakkeesta.",
+  "TakQuickstartIos4.unfoldableCard1.description2": "b. Valitse Settings-päävalikosta <strong>Preferences.</strong>",
+  "TakQuickstartIos4.unfoldableCard1.description3": "Asetetaan oikeat mittayksiköt ja koordinattijärjestelmä.",
+  "TakQuickstartIos4.unfoldableCard2.title": "2. <strong>Aseta</strong> mittayksiköt",
+  "TakQuickstartIos4.unfoldableCard2.description1": "Valitse <strong>Units of Measure</strong>:",
+  "TakQuickstartIos4.unfoldableCard2.description2": "Valitse Coordinate Formatiksi <strong>MGRS</strong>, ja Distance Formatiksi <strong>Meters</strong>.",
+  "TakQuickstartIos4.unfoldableCard3.title": "3. Halutessasi <strong>vaihda</strong> karttapohja",
+  "TakQuickstartIos4.unfoldableCard3.description1": "a. Halutessasi vaihda karttapohja Settings-päävalikosta painamalla <strong>Map Sourcea</strong>.",
+  "TakQuickstartIos4.unfoldableCard3.description2": "b. Valitse haluamasi karttapohja. Huom! Saatavuus vaihtelee.",
+  "TakQuickstartIos4.unfoldableCard3.description3": "Hienoa! Olet nyt asettanut iTAKin käyttökuntoon.<br><br><em><small>Mikäli sinun tarvitsee tehdä muutoksia peitenimeesi, onnistuu se Settings-valikosta klikkaamalla peitenimeäsi.</small></em>",
+
+  "TAKQUICKSTARTIOS5": "TAKQUICKSTARTIOS5",
+  "TakQuickstartIos5.navbarTitle": "iTAK käyttöönotto",
+  "TakQuickstartIos5.statusBarTitle": "Ota käyttöön Data Sync (5/5)",
+  "TakQuickstartIos5.serviceInfoCard.details": "iTAK käyttöönotto - vaihe 5: <strong>Ota käyttöön Data Sync</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee. Tässä vaiheessa iTAK-sovelluksen tulee olla auki.",
+  "TakQuickstartIos5.unfoldableCard1.title": "1. Avaa Data Sync-valikko",
+  "TakQuickstartIos5.unfoldableCard1.step1": "Päänäkymässä, avaa työkaluvalikosta (alareunassa) <strong>Data Sync</strong> -valikko. Vieritä oikealle löytääksesi valikon.",
+  "TakQuickstartIos5.unfoldableCard2.title": "2. Tilaa feed",
+  "TakQuickstartIos5.unfoldableCard2.step1": "Data Sync-valikossa paina <strong>Subscribe</strong> -painiketta.",
+  "TakQuickstartIos5.unfoldableCard2.step2": "Valitse saatavilla oleva palvelin (Rasenmaeher-palvelun niminen tulee näkyviin.)",
+  "TakQuickstartIos5.unfoldableCard2.step3": "Avautuvassa näkymässä, valitse <strong>RECON</strong>-feed.",
+  "TakQuickstartIos5.unfoldableCard2.note": "Huom. Kuva puuttuu toistaiseksi.",
+  "TakQuickstartIos5.unfoldableCard3.title": "3. Feed käytössäsi",
+  "TakQuickstartIos5.unfoldableCard3.step1": "Tämän jälkeen käytössäsi on joukkosi komentopaikan luoma <strong>Recon Feed</strong>.",
+  "TakQuickstartIos5.unfoldableCard3.step2": "Feed näkyy Data Sync-valikossasi. Feedin käyttöohjeet <strong>Käyttö joukossa-ohjeissa.</strong>",
+  "TakQuickstartIos5.alterForward": "Valmis! Palaa tästä."
 }
