do i18n for takquickstartwin (fi/en) partly

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -467,5 +467,44 @@
   "TakQuickstartIos5.unfoldableCard3.title": "3. Feed at your disposal",
   "TakQuickstartIos5.unfoldableCard3.step1": "Starting from now, the <strong>Recon Feed</strong> created and updated by your Command Post users is at your disposal.",
   "TakQuickstartIos5.unfoldableCard3.step2": "The feed will appear in your Data Sync menu. Instructions for using the feed are in the <strong>Using in the group instructions.</strong>",
-  "TakQuickstartIos5.alterForward": "Done! Return from here."
+  "TakQuickstartIos5.alterForward": "Done! Return from here.",
+
+  "TAKQUICKSTARTWIN1": "TAKQUICKSTARTWIN1",
+  "TakQuickstartWin1.navbarTitle": "WinTAK Quickstart",
+  "TakQuickstartWin1.statusBarTitle": "Set your Windows PC's Language to English (1/4)",
+  "TakQuickstartWin1.serviceInfoCard.details": "WinTAK Quickstart - phase 1: <strong>Set the Windows PC language</strong><br>Recommendation: Work in pairs - one reads the instructions, the other performs the actions.",
+  "TakQuickstartWin1.unfoldableCard1.title": "1. Set your Region to United States",
+  "TakQuickstartWin1.unfoldableCard1.description1": "WinTAK requires the workstation's language to be <strong>English</strong> and the region setting <strong>United States.</strong><br>Before installing the application, search for <strong>Time and Language</strong> from the search bar (bottom left).",
+  "TakQuickstartWin1.unfoldableCard1.description2": "Type <strong>Time and Language</strong> into the search.",
+  "TakQuickstartWin1.unfoldableCard1.description3": "First, let's change the region setting. Select <strong>Region</strong> from the sidebar in Time and Language menu.",
+  "TakQuickstartWin1.unfoldableCard1.description4": "Select <strong>United States</strong> for the country or region. Ensure that the regional format is also set to <strong>English (United States).</strong>",
+  "TakQuickstartWin1.unfoldableCard2.title": "2. Set Language to English (US)",
+  "TakQuickstartWin1.unfoldableCard2.description1": "From the sidebar in Time and Language menu, select <strong>Language.</strong> Let's change the display language.",
+  "TakQuickstartWin1.unfoldableCard2.description2": "Set the Windows display language to <strong>English (United States)</strong>.",
+  "TakQuickstartWin1.unfoldableCard2.description3": "Finalize changing the display language by signing out and signing back in.",
+  "TakQuickstartWin1.unfoldableCard2.description4": "If you have successfully set English as the display language, the language settings are complete. The next step of the guide addresses the scenario where English is missing from the display language options.",
+  "TakQuickstartWin1.unfoldableCard3.title": "3. If Necessary, Add Language Pack (English)",
+  "TakQuickstartWin1.unfoldableCard3.description1": "If English is not available in the display language options, press <strong>Add a language</strong> and search for it.",
+  "TakQuickstartWin1.unfoldableCard3.description2": "Press <strong>Install language pack.</strong> Wait for the language pack to install.",
+  "TakQuickstartWin1.unfoldableCard3.description3": "Afterward, you can select English as the display language <strong>as described in step 2</strong>.<br>Finalize changing the display language by signing out and signing back in.",
+  "TakQuickstartWin1.unfoldableCard3.description4": "The language settings are now complete. Next, we will install the WinTAK application itself.",
+
+  "TAKQUICKSTARTWIN2": "TAKQUICKTARTWIN2",
+  "TakQuickstartWin2.navbarTitle": "WinTAK Quickstart",
+  "TakQuickstartWin2.statusBarTitle": "Download and Install WinTAK (2/4)",
+  "TakQuickstartWin2.serviceInfoCard.details": "WinTAK Quickstart - phase 2: <strong>Download and install WinTAK</strong><br>Recommendation: Work in pairs - one reads the instructions, the other performs the actions.",
+  "TakQuickstartWin2.unfoldableCard1.title": "1. Download WinTAK",
+  "TakQuickstartWin2.unfoldableCard1.description1": "Download the WinTAK application from the <strong>Defense Forces' designated location</strong>.<br><strong>Download</strong> by clicking the icon below:",
+  "TakQuickstartWin2.unfoldableCard1.note": "Important! Only download Windows applications from the instructed location.",
+  "TakQuickstartWin2.unfoldableCard2.title": "2. Open the Installer",
+  "TakQuickstartWin2.unfoldableCard2.description1": "Find the downloaded zip and extract it. Locate the .msi installation file inside the zip's Products folder",
+  "TakQuickstartWin2.unfoldableCard2.description2": "Double-click the .msi file to open the installer.",
+  "TakQuickstartWin2.unfoldableCard3.title": "3. Install Using the Installer",
+  "TakQuickstartWin2.unfoldableCard3.description1": "Install WinTAK using the Setup Wizard.",
+  "TakQuickstartWin2.unfoldableCard3.description2": "a. Press <strong>Next</strong>. Choose the application installation folder.",
+  "TakQuickstartWin2.unfoldableCard3.description3": "b. Optionally change the installation folder via the <strong>Browse</strong> button. Press <strong>Next</strong>.",
+  "TakQuickstartWin2.unfoldableCard3.description4": "c. Select the components to install in the Setup Wizard.<br>Select at least the following component:<ul><li><strong>Data Sync</strong></li></ul>",
+  "TakQuickstartWin2.unfoldableCard3.description5": "d. Press <strong>Next</strong>. The Wizard is ready to start the installation, press <strong>Install</strong>.",
+  "TakQuickstartWin2.unfoldableCard3.description6": "e. Press <strong>Next</strong>.",
+  "TakQuickstartWin2.unfoldableCard3.description7": "The application is now installed.<br>Next, we will open the installed application."
 }
