--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -466,5 +466,44 @@
   "TakQuickstartIos5.unfoldableCard3.title": "3. Feed käytössäsi",
   "TakQuickstartIos5.unfoldableCard3.step1": "Tämän jälkeen käytössäsi on joukkosi komentopaikan luoma <strong>Recon Feed</strong>.",
   "TakQuickstartIos5.unfoldableCard3.step2": "Feed näkyy Data Sync-valikossasi. Feedin käyttöohjeet <strong>Käyttö joukossa-ohjeissa.</strong>",
-  "TakQuickstartIos5.alterForward": "Valmis! Palaa tästä."
+  "TakQuickstartIos5.alterForward": "Valmis! Palaa tästä.",
+
+  "TAKQUICKSTARTWIN1": "TAKQUICKSTARTWIN1",
+  "TakQuickstartWin1.navbarTitle": "WinTAK käyttöönotto",
+  "TakQuickstartWin1.statusBarTitle": "Työaseman kieleksi englanti (1/4)",
+  "TakQuickstartWin1.serviceInfoCard.details": "WinTAK käyttöönotto - vaihe 1: <strong>työaseman kieli</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee.",
+  "TakQuickstartWin1.unfoldableCard1.title": "1. Alueasetukseksi Yhdysvallat",
+  "TakQuickstartWin1.unfoldableCard1.description1": "WinTAKin toiminta edellyttää, että työaseman kieli on <strong>englanti</strong> ja alueasetus <strong>Yhdysvallat.</strong><br>Ennen sovelluksen asentamista, hae hakupalkista (vasen alakulma) asetusta <strong>Aika ja kieli</strong>.",
+  "TakQuickstartWin1.unfoldableCard1.description2": "Kirjoita hakuun <strong>Aika ja kieli</strong>.",
+  "TakQuickstartWin1.unfoldableCard1.description3": "Vaihdetaan ensin alueasetus. Valitse Aika ja kieli-valikon sivupalkista <strong>Alue</strong>.",
+  "TakQuickstartWin1.unfoldableCard1.description4": "Valitse kohtaan maa tai alue <strong>Yhdysvallat</strong>. Varmista, että alueasetuksissa on valittuna myös <strong>englanti (Yhdysvallat).</strong>",
+  "TakQuickstartWin1.unfoldableCard2.title": "2. Kieleksi englanti (US)",
+  "TakQuickstartWin1.unfoldableCard2.description1": "Valitse Aika ja kieli -valikon sivupalkista <strong>Kieli.</strong> Vaihdetaan näyttökieli.",
+  "TakQuickstartWin1.unfoldableCard2.description2": "Valitse Windowsin näyttökieleksi <strong>englanti (Yhdysvallat)</strong>.",
+  "TakQuickstartWin1.unfoldableCard2.description3": "Päätä näyttökielen vaihto kirjautumalla ulos ja uudelleen sisään.",
+  "TakQuickstartWin1.unfoldableCard2.description4": "Mikäli onnistuit nyt asettamaan näyttökieleksi englannin, kieliasetukset ovat valmiit. Ohjeen seuraava askel koskee tilannetta, missä englannin kieli puuttuu näyttökielivalikosta.",
+  "TakQuickstartWin1.unfoldableCard3.title": "3. Tarvittaessa lisää kielipaketti (englanti)",
+  "TakQuickstartWin1.unfoldableCard3.description1": "Jos englannin kieltä ei löydy näyttökielivalikosta, paina <strong>Lisää kieli</strong> ja etsi se.",
+  "TakQuickstartWin1.unfoldableCard3.description2": "Paina <strong>Asenna kielipaketti.</strong> Odota kielipaketin asentumista.",
+  "TakQuickstartWin1.unfoldableCard3.description3": "Tämän jälkeen voit valita näyttökieleksi englannin <strong>ohjeen kohdan 2 mukaisesti</strong>.<br>Päätä näyttökielen vaihto kirjautumalla ulos ja uudelleen sisään.",
+  "TakQuickstartWin1.unfoldableCard3.description4": "Kieliasetukset ovat valmiit. Seuraavaksi asennetaan itse WinTAK-sovellus.",
+
+  "TAKQUICKSTARTWIN2": "TAKQUICKSTARTWIN2",
+  "TakQuickstartWin2.navbarTitle": "WinTAK käyttöönotto",
+  "TakQuickstartWin2.statusBarTitle": "Lataa ja asenna WinTAK (2/4)",
+  "TakQuickstartWin2.serviceInfoCard.details": "WinTAK käyttöönotto - vaihe 2: <strong>Lataa ja asenna WinTAK</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee.",
+  "TakQuickstartWin2.unfoldableCard1.title": "1. Lataa WinTAK",
+  "TakQuickstartWin2.unfoldableCard1.description1": "Lataa WinTAK-sovellus <strong>Puolustusvoimien osoittamasta paikasta</strong>.<br><strong>Lataa</strong> painamalla kuvaketta alta:",
+  "TakQuickstartWin2.unfoldableCard1.note": "Tärkeää! Lataa Windows-sovelluksia vain ohjeistetusta paikasta.",
+  "TakQuickstartWin2.unfoldableCard2.title": "2. Avaa asennusohjelma",
+  "TakQuickstartWin2.unfoldableCard2.description1": "Etsi latamaasi zip ja pura se. Etsi .msi-päätteinen asennusohjelma zipin sisältä Products-kansiosta",
+  "TakQuickstartWin2.unfoldableCard2.description2": "Kaksoisnapauta .msi -tiedostoa. Aukeaa asennusohjelma.",
+  "TakQuickstartWin2.unfoldableCard3.title": "3. Asenna käyttäen asennusohjelmaa",
+  "TakQuickstartWin2.unfoldableCard3.description1": "Asenna WinTAK käyttäen Setup Wizardia.",
+  "TakQuickstartWin2.unfoldableCard3.description2": "a. Paina <strong>Next</strong>. Valitse sovelluksen asennuskansio.",
+  "TakQuickstartWin2.unfoldableCard3.description3": "b. Vaihda halutessasi asennuskansiota <strong>Browse</strong>-napin kautta. Paina <strong>Next</strong>.",
+  "TakQuickstartWin2.unfoldableCard3.description4": "c. Valitse Setup Wizardissa asennettavat lisäosat.<br>Valitse ainakin seuraavat lisäosat:<ul><li><strong>Data Sync</strong></li></ul>",
+  "TakQuickstartWin2.unfoldableCard3.description5": "d. Paina <strong>Next</strong>. Wizard on valmis aloittamaan asennuksen, paina <strong>Install</strong>.",
+  "TakQuickstartWin2.unfoldableCard3.description6": "e. Paina <strong>Next</strong>.",
+  "TakQuickstartWin2.unfoldableCard3.description7": "Sovellus on nyt asennettu.<br>Seuraavaksi avataan asennettu sovellus."
 }
