Edit useFetchZipFile so that we get iTAK zip for iUsers
It's the second in /api/v1/instructions/user/ tak.zip array so this should do.

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -250,7 +250,7 @@
   "serviceTak.step1Description": "<strong>Quickstart Guide</strong> tells you how to start using TAK on your device.",
   "serviceTak.step2Description": "The <strong>Usage Guide</strong> tells you how to use the application, according to our standard model.",
   "serviceTak.step3Description": "Download the <strong>Client Package</strong> and install it to your TAK device according to the Quickstart Guide, to get using the app.",
-  "serviceTak.guideButton.quickStart": "Quickstart Guide",
+  "serviceTak.guideButton.quickStart": "Quickstart",
   "serviceTak.guideButton.usage": "Usage Guide",
   "serviceTak.grabZipButton": "Download your Client Package",
   "serviceTak.grabZipButton.loading": "Loading...",
