Update deps & Add language autodetector
Tested to work, probably have to set up buttons for this too, anyway

--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -12,7 +12,7 @@
   "footer.authenticatedWithMtls": "Tunnistautunut mTLS:llä",
   "footer.proudlyServedBy": "Sovelluksen tarjoaa:",
   "footer.allRightsReservedFDF": "FDF-UI, PV:n logo & taustakuvat:",
-  "footer.allRightsReservedFDFnotice": "Puolustusvoimat. Kaikki oikeudet pidätetään",
+  "footer.allRightsReservedFDFnotice": "Puolustusvoimat. Kaikki oikeudet pidätetään.",
   "footer.allRightsReservedPVATK": "PVATK. Kaikki oikeudet pidätetään.",
   "footer.feedbackForm": "Kerro palautetta tai ideoita kehittäjille lomakkeella!",
 
